--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
             <div class="desc">
                 <h2>Bruno D Rezende</h2>
-                <p>Olá mundo!</p>
+                <p>Sou o Bruno, engenheiro de computação, desenvolvedor de sistemas e especialista em gestão de projetos.</p>
+                <p>Atualmente, tenho focado no desenvolvimento de habilidades nas áreas de: Data Engineering, Cloud Engineering, Artificial Intelligence.</p>
+                <p>Possuo habilidades em metodologias ágeis, Scrum, Kanban, e metodologias de melhoria de processos Seis Sigma</p>
             </div><!--desc-->
 
             <div class="link">
@@ -27,8 +29,8 @@
                 <a href="https://developers.google.com/profile/u/brezende1"><div class="link-a"><img src="img/gdev.svg"><h3>Google Developers</h3></div></a>
                 <!--<a href=""><div class="link-a"><img src="img/aws.svg"><h3>AWS</h3></div></a>-->
                 <a href="https://learn.microsoft.com/pt-br/users/brunodamicorezende-7177/"><div class="link-a"><img src="img/azure.svg"><h3>Azure</h3></div></a>
-                <a href="mailto:bdrezende1@gmail.com"><div class="link-a"><img src="img/gmail.svg"><h3>Email</h3></div></a>
-                <a href="https://t.me/bdrezende1"><div class="link-a"><img src="img/telegram.svg"><h3>Telegram</h3></div></a>
+                <a href="mailto:bdrezende1@gmail.com"><div class="link-a"><img src="img/gmail.svg"><h3>Me mande um email</h3></div></a>
+                <a href="https://t.me/bdrezende1"><div class="link-a"><img src="img/telegram.svg"><h3>Fale comigo no Telegram</h3></div></a>
             </div><!--link-->            
         </div><!--container-->
     </div><!--center-->
