--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="desc">
                 <h2>Bruno D Rezende</h2>
                 <p>Sou o Bruno, engenheiro de computação, desenvolvedor de sistemas e especialista em gestão de projetos.</p>
-                <p>Atualmente, tenho focado no desenvolvimento de habilidades nas áreas de: Data Engineering, Cloud Engineering, Artificial Intelligence.</p>
-                <p>Possuo habilidades em metodologias ágeis, Scrum, Kanban, e metodologias de melhoria de processos Seis Sigma</p>
+                <br><p>Atualmente, tenho focado no desenvolvimento de habilidades nas áreas de: Data Engineering, Cloud Engineering, Artificial Intelligence.</p>
+                <br><p>Possuo habilidades em metodologias ágeis, Scrum, Kanban, e metodologias de melhoria de processos Seis Sigma</p>
             </div><!--desc-->
 
             <div class="link">
