--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <h2>Bruno D Rezende</h2>
                 <p>Sou o Bruno, engenheiro de computação, desenvolvedor de sistemas e especialista em gestão de projetos.</p>                
                 <br><p>Atualmente, tenho focado no desenvolvimento de habilidades nas áreas de: Data Engineering, Cloud Engineering, Artificial Intelligence.</p>
-                <br><p>Possuo habilidades em metodologias ágeis, Scrum, Kanban, e metodologias de melhoria de processos Seis Sigma</p>
-                <br><p>Possuo certificações, especialmente em Cloud Computing, pela AWS e Oracle Cloud:<br><br>- AWS Certified Cloud Practitioner™<br>- Oracle Cloud Infrastructure Certified Associate™<br>- Oracle Cloud Data Management Certified Associate™<br>- Scrum Foundation Professional Certification - SFPC™</p>                
+                <br><p>Possuo habilidades em metodologias ágeis, Scrum, Kanban, e metodologias de melhoria de processos Seis Sigma.</p>
+                <br><p>Possuo certificações, especialmente em Cloud Computing, pela AWS e Oracle Cloud:<br><br>- AWS Certified Cloud Practitioner™<br>- Oracle Cloud Infrastructure Certified Associate™<br>- Oracle Cloud Data Management Certified Associate™<br>- Scrum Foundation Professional Certification - SFPC™<br>- Six Sigma Green Belt™</p>                              
             </div><!--desc-->
 
             <div class="link">
@@ -31,10 +31,10 @@
                 <a href="https://learn.microsoft.com/pt-br/users/brunodamicorezende-7177/"><div class="link-a"><img src="img/azure.svg"><h3>Azure</h3></div></a>
                 <a href="mailto:bdrezende1@gmail.com"><div class="link-a"><img src="img/gmail.svg"><h3>Me mande um email</h3></div></a>
                 <a href="https://t.me/bdrezende1"><div class="link-a"><img src="img/telegram.svg"><h3>Fale comigo no Telegram</h3></div></a>
-                <a href="https://www.credly.com/earner/earned/badge/78e3bced-78f1-4272-9de4-91f20a8db807"><div class="link-a"><img src="img/aws_clf.png"><h3>AWS<br>Certified Cloud Practitioner</h3></div></a>
+                <a href="https://www.credly.com/badges/78e3bced-78f1-4272-9de4-91f20a8db807/public_url"><div class="link-a"><img src="img/aws_clf.png"><h3>AWS<br>Certified Cloud Practitioner</h3></div></a>
                 <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=BC3D3E551186A79241170475037542C3F68A792D9CA0E1F5A8CC8792D87E0F56"><div class="link-a"><img src="img/oci.png"><h3>Oracle Cloud<br>Infrastructure Certified Associate</h3></div></a>
                 <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=E8B32ECD338A7BD91884908D52408F0BA4078DCA7A2CCFFF9FE41FB903EAE92E"><div class="link-a"><img src="img/oci_data.png"><h3>Oracle Cloud<br>Data Management Certified Associate</h3></div></a>
-                <a href="https://www.credly.com/earner/earned/badge/72bd5fc7-bc02-473e-a341-52cad480cc29"><div class="link-a"><img src="img/scrum.png"><h3>Scrum <br>Foundation Professional Certification</h3></div></a>
+                <a href="https://www.credly.com/badges/72bd5fc7-bc02-473e-a341-52cad480cc29/public_url"><div class="link-a"><img src="img/scrum.png"><h3>Scrum <br>Foundation Professional Certification</h3></div></a>
             </div><!--link-->            
         </div><!--container-->
     </div><!--center-->
